[tool.poetry]
name = "ton-txns-data-conv"
version = "0.1.0"
description = "The TON Transactions data converter is a project aimed at retrieving and converting transaction data recorded on the TON blockchain."
authors = ["7rikaz_h785 <7rikaz.h785.stat2ltas41lcijad@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytonapi = "^0.3.1"
pandas = "^2.2.2"
tomlkit = "^0.12.5"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.9"
mypy = "^1.10.0"
taskipy = "^1.12.2"
pytest = "^8.2.2"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
